<!--
  ~  Copyright 2023 Varsha Kulkarni
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">YLVPlayer</string>
    <string name="media_url_mp3">https://storage.googleapis.com/exoplayer-test-media-0/play.mp3</string>
    <string name="media_url_dash"><![CDATA[https://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]>
    </string>
    <string name="play_video">Play Video</string>
    <string name="youtube_link">Youtube Link:</string>
    <string name="menu_settings">Settings</string>
    <string name="minus_text">-</string>
    <string name="plus_text">+</string>
    <string name="pitch_value">0.00</string>
    <string name="tempo_value">%d %%</string>
    <string name="tempo">Tempo</string>
    <string name="pitch">Pitch</string>
    <string name="reset">Reset</string>
    <string name="video_thumbnail">Video Thumbnaill</string>
    <string name="video_icon">Video Icon</string>
    <string name="null_string">null</string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>
    <string name="local_videos">Local Videos:</string>
    <string name="loop">Loop</string>
    <string name="url_help">Copy paste Youtube Url or click on share video on Youtube app and Open with YLVPlayer!\n Or Search History for Video Titles</string>
    <string name="url_hint">Youtube URL</string>
    <string name="error_yt_url">Please enter valid Youtube Url!</string>
    <string name="no_data">No Videos! \n Check and Allow Media permissions</string>
    <string name="settings">Settings</string>
    <string name="pitch_default">0.0</string>
</resources>