<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright 2023 Varsha Kulkarni
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/PopViewStyle"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    app:layout_constraintWidth_percent="0.8">


    <ProgressBar
        android:id="@+id/popviewProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeading"
        style="@style/SettingsTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pitchTextView"
        style="@style/SettingsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/pitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeading" />

    <EditText
        android:id="@+id/pitchValueText"
        style="@style/SettingsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal|numberSigned"
        android:text="@string/pitch_value"
        app:layout_constraintEnd_toStartOf="@+id/pitchResetButton"
        app:layout_constraintStart_toEndOf="@+id/pitchTextView"
        app:layout_constraintTop_toBottomOf="@id/tvHeading" />

    <Button
        android:id="@+id/pitchResetButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginVertical="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_refresh_24"
        app:backgroundTint="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeading" />

    <Button
        android:id="@+id/pitchMinusButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/minus"
        android:padding="24dp"
        app:backgroundTint="@color/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pitchTextView" />

    <SeekBar
        android:id="@+id/pitchSeekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:max="120"
        android:min="1"
        android:progress="60"
        app:layout_constraintBottom_toBottomOf="@+id/pitchMinusButton"
        app:layout_constraintEnd_toStartOf="@id/pitchPlusButton"
        app:layout_constraintStart_toEndOf="@id/pitchMinusButton"
        app:layout_constraintTop_toTopOf="@+id/pitchMinusButton"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/pitchPlusButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/plus"
        android:padding="24dp"
        app:backgroundTint="@color/colorSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/pitchSeekbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pitchResetButton" />

    <View
        android:id="@+id/pitchSeparator"
        style="@style/SeparatorStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pitchPlusButton" />

    <TextView
        android:id="@+id/tempoTextView"
        style="@style/SettingsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/tempo"
        app:layout_constraintBottom_toBottomOf="@+id/tempoValueText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pitchSeparator" />

    <TextView
        android:id="@+id/tempoValueText"
        style="@style/SettingsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toStartOf="@+id/tempoResetButton"
        app:layout_constraintStart_toEndOf="@+id/tempoTextView"
        app:layout_constraintTop_toBottomOf="@+id/pitchSeparator" />

    <Button
        android:id="@+id/tempoResetButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginVertical="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_refresh_24"
        android:padding="24dp"
        app:backgroundTint="@color/colorSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/tempoTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tempoTextView" />

    <Button
        android:id="@+id/tempoMinusButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/minus"
        app:backgroundTint="@color/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tempoTextView" />

    <SeekBar
        android:id="@+id/tempoSeekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:max="200"
        android:min="1"
        android:progress="100"
        app:layout_constraintBottom_toBottomOf="@+id/tempoMinusButton"
        app:layout_constraintEnd_toStartOf="@id/tempoPlusButton"
        app:layout_constraintStart_toEndOf="@id/tempoMinusButton"
        app:layout_constraintTop_toTopOf="@+id/tempoMinusButton"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/tempoPlusButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/plus"
        app:backgroundTint="@color/colorSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/tempoSeekbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempoResetButton" />

    <View
        android:id="@+id/tempoSeparator"
        style="@style/SeparatorStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tempoPlusButton" />

    <TextView
        android:id="@+id/tvLooperLabel"
        style="@style/SettingsTextStyle"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/loop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tempoSeparator" />

    <CheckBox
        android:id="@+id/cbRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLooperLabel"
        app:layout_constraintStart_toEndOf="@id/tvLooperLabel"
        app:layout_constraintTop_toTopOf="@+id/tvLooperLabel" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/timeline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:labelBehavior="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLooperLabel"
        app:thumbColor="@color/colorSecondary"
        app:trackColorActive="@color/colorSecondary"
        app:trackColorInactive="@color/lightGrayColor" />

    <View
        android:id="@+id/bottomSeparator"
        style="@style/SeparatorStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeline" />
</androidx.constraintlayout.widget.ConstraintLayout>